--- a/CycleSafeJava/app/src/main/res/values/strings.xml
+++ b/CycleSafeJava/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="tab_text_3">Statistics</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="maps_api_key">AIzaSyDcAJX1uQU3urGhAOm2QBVrLUlQQJd_RyQ</string>
+    <string name="default_info_title">Default Location</string>
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
+    <string name="option_get_place">Get place</string>
+    <string name="pick_place">Choose a place</string>
+    <string name="SetMarker">Add Marker</string>
+    <string name="GoBack">Back To Main</string>
 </resources>
